feat: add  resourec query all list
